--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.x",
-    "petitio": "^1.3.2",
-    "react": "17.x",
-    "react-dom": "17.x"
-  }
+    "name": "nextjs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "next": "10.x",
+        "petitio": "^1.3.2",
+        "react": "17.x",
+        "react-dom": "17.x"
+    },
+    "devDependencies": {
+        "eslint": "^7.26.0",
+        "eslint-plugin-react": "^7.23.2"
+    }
 }
