--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "todo-tree.tree.scanMode": "open files"
+    "todo-tree.tree.scanMode": "open files",
+    "cSpell.words": [
+        "apos",
+        "aren",
+        "sitename"
+    ]
 }
