--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "next": "10.x",
         "petitio": "^1.3.2",
         "react": "17.x",
-        "react-dom": "17.x",
-        "react-router-dom": "^5.2.0"
+        "react-dom": "17.x"
     },
     "devDependencies": {
         "eslint": "^7.26.0",
