--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
         "start": "next start"
     },
     "dependencies": {
-        "next": "10.x",
+        "next": "^10.2.0",
         "petitio": "^1.3.2",
-        "react": "17.x",
-        "react-dom": "17.x"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
         "eslint": "^7.26.0",
