add: intial Material-UI for index page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "todo-tree.tree.scanMode": "open files",
     "cSpell.words": [
+        "Cantarell",
+        "Neue",
+        "Roboto",
+        "Segoe",
         "apos",
         "aren",
         "sitename"
