--- a/package.json
+++ b/package.json
@@ -8,6 +8,15 @@
         "start": "next start"
     },
     "dependencies": {
+        "@emotion/cache": "^11.4.0",
+        "@emotion/react": "^11.4.0",
+        "@emotion/server": "^11.4.0",
+        "@emotion/styled": "^11.3.0",
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/data-grid": "^4.0.0-alpha.28",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/styles": "^4.11.4",
+        "clsx": "^1.1.1",
         "next": "^10.2.0",
         "petitio": "^1.3.2",
         "react": "^17.0.2",
