--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "nextjs",
     "version": "0.1.0",
     "private": true,
+    "browserslist": [
+        ">0.3%",
+        "not ie 11",
+        "not dead"
+    ],
     "scripts": {
         "dev": "next dev",
         "build": "next build",
