--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@material-ui/styles": "^4.11.4",
         "clsx": "^1.1.1",
         "next": "^10.2.0",
+        "next-pwa": "^5.2.21",
         "petitio": "^1.3.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
