--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,9 @@
 /build
 
 # service workers
-/public/sw*
-/public/workbox*
+**/public/workbox-*.js
+**/public/sw.js
+**/public/sw.map.js
 
 # misc
 .DS_Store
