--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,8 @@
 /build
 
 # service workers
-**/public/workbox-*.js
-**/public/sw.js
-**/public/sw.map.js
-/public/workbox-*.js
-/public/sw.js
-/public/sw.map.js
+public/workbox-*.js*
+public/sw.js*
 
 # misc
 .DS_Store
