add: custom error page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,14 @@
     "cSpell.words": [
         "Cantarell",
         "Neue",
+        "REEEEEEEEEEEE",
         "Roboto",
         "Segoe",
         "apos",
         "aren",
         "browserslist",
         "clsx",
+        "sies",
         "sitename"
     ]
 }
