fix: mv static html from app to doc, use webpack 5

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "Cantarell",
         "Neue",
+        "Pastpaper",
         "REEEEEEEEEEEE",
         "Roboto",
         "Segoe",
