--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "next-pwa": "^5.2.21",
         "petitio": "^1.3.2",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-latex": "^2.0.0",
+        "recharts": "^2.0.9"
     },
     "devDependencies": {
         "eslint": "^7.26.0",
