add: Subject list (does nothing atm)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Cantarell",
         "Neue",
         "Pastpaper",
+        "Pastpapers",
         "REEEEEEEEEEEE",
         "Roboto",
         "Segoe",
