--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
         "@emotion/react": "^11.4.0",
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.3.0",
-        "@material-ui/core": "^4.11.4",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/styles": "^4.11.4",
+        "@material-ui/core": "^5.0.0-alpha.34",
+        "@material-ui/icons": "^5.0.0-alpha.34",
+        "@material-ui/lab": "^5.0.0-alpha.34",
+        "@material-ui/styles": "^5.0.0-alpha.33",
         "clsx": "^1.1.1",
         "next": "^10.2.0",
         "next-pwa": "^5.2.21",
