--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "PastpaperArmyKnife",
-    "short_name": "PastpaperArmyKnife",
+    "name": "Excigma's Notes",
+    "short_name": "xΣ's Notes",
     "theme_color": "#0061b0",
     "background_color": "#303030",
     "display": "fullscreen",
@@ -9,45 +9,41 @@
     "start_url": "/",
     "icons": [
         {
-            "src": "icons/icon-16x16.png",
-            "sizes": "16x16",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-32x32.png",
-            "sizes": "32x32",
-            "type": "image/png"
+            "src": "\/android-icon-36x36.png",
+            "sizes": "36x36",
+            "type": "image\/png",
+            "density": "0.75"
         },
         {
             "purpose": "maskable",
-            "src": "icons/icon-48x48.png",
+            "src": "\/android-icon-48x48.png",
             "sizes": "48x48",
-            "type": "image/png"
+            "type": "image\/png",
+            "density": "1.0"
         },
         {
-            "src": "icons/icon-72x72.png",
+            "src": "\/android-icon-72x72.png",
             "sizes": "72x72",
-            "type": "image/png"
+            "type": "image\/png",
+            "density": "1.5"
         },
         {
-            "src": "icons/icon-96x96.png",
+            "src": "\/android-icon-96x96.png",
             "sizes": "96x96",
-            "type": "image/png"
+            "type": "image\/png",
+            "density": "2.0"
         },
         {
-            "src": "icons/icon-144x144.png",
+            "src": "\/android-icon-144x144.png",
             "sizes": "144x144",
-            "type": "image/png"
+            "type": "image\/png",
+            "density": "3.0"
         },
         {
-            "src": "icons/icon-192x192.png",
+            "src": "\/android-icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
+            "type": "image\/png",
+            "density": "4.0"
         }
     ],
     "splash_pages": null
