new: Rebrand cont.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "aren",
         "browserslist",
         "clsx",
+        "dicedtomato",
         "noindex",
         "sies",
         "sitename"
