new: continue rebrand to personal webpage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Excigma's Notes",
-    "short_name": "xΣ's Notes",
+    "name": "Excigma's Page",
+    "short_name": "xΣ's Page",
     "theme_color": "#0061b0",
     "background_color": "#303030",
     "display": "fullscreen",
