--- a/public/manifest.json
+++ b/public/manifest.json
@@ -52,7 +52,7 @@
         },
         {
             "src": "\/icon.svg",
-            "sizes": "all",
+            "sizes": "any",
             "type": "image\/svg"
         }
     ],
