--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
         "clsx": "^1.1.1",
         "next": "^10.2.0",
         "next-pwa": "^5.2.21",
-        "petitio": "^1.3.2",
+        "prismjs": "^1.23.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-latex": "^2.0.0",
-        "recharts": "^2.0.9"
+        "react-refractor": "^2.1.4",
+        "react-syntax-highlighter": "^15.4.3",
+        "recharts": "^2.0.9",
+        "refractor": "^4.0.0"
     },
     "devDependencies": {
         "eslint": "^7.26.0",
