fix: remove unneeded color=, optimise imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "dicedtomato",
         "monospace",
         "noindex",
+        "notekeeping",
         "sies",
         "sitename"
     ]
