fix: MORE page -> webpage LOL

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Excigma's Page",
+    "name": "Excigma's Webpage",
     "short_name": "xΣ's Page",
     "theme_color": "#0061b0",
     "background_color": "#303030",
