new: Better navbar for mobile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "REEEEEEEEEEEE",
         "Roboto",
         "Segoe",
+        "Swipeable",
         "apos",
         "aren",
         "browserslist",
