--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "todo-tree.tree.scanMode": "open files",
     "cSpell.words": [
+        "Birthdate",
         "Cantarell",
         "Consolas",
         "Inconsolata",
@@ -18,7 +19,10 @@
         "dicedtomato",
         "monospace",
         "noindex",
+        "normalised",
         "notekeeping",
+        "organisation",
+        "prismjs",
         "sies",
         "sitename"
     ]
