--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-    "name": "nextjs",
+    "name": "webpage",
     "version": "0.1.0",
     "private": true,
-    "browserslist": [
-        ">0.3%",
-        "not ie 11",
-        "not dead"
-    ],
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -24,14 +19,10 @@
         "clsx": "^1.1.1",
         "next": "^10.2.0",
         "next-pwa": "^5.2.21",
-        "prismjs": "^1.23.0",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2",
         "react-latex": "^2.0.0",
-        "react-refractor": "^2.1.4",
         "react-syntax-highlighter": "^15.4.3",
-        "recharts": "^2.0.9",
-        "refractor": "^4.0.0"
+        "recharts": "^2.0.9"
     },
     "devDependencies": {
         "eslint": "^7.26.0",
