--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "next": "^10.2.0",
         "next-pwa": "^5.2.21",
         "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-latex": "^2.0.0",
         "react-syntax-highlighter": "^15.4.3",
         "recharts": "^2.0.9"
