add: Fira Code font

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Birthdate",
         "Cantarell",
         "Consolas",
+        "ENDTYPE",
         "Inconsolata",
         "Neue",
         "Pastpaper",
