remove: redundant duplicate components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Cantarell",
         "Consolas",
         "ENDTYPE",
+        "Fira",
         "Inconsolata",
         "Neue",
         "Pastpaper",
