--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "clsx": "^1.1.1",
         "next": "^10.2.0",
         "next-pwa": "^5.2.21",
+        "next-sitemap": "^1.6.95",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-latex": "^2.0.0",
         "react-syntax-highlighter": "^15.4.3",
-        "recharts": "^2.0.9"
+        "recharts": "^2.0.9",
+        "title": "^3.4.3"
     },
     "devDependencies": {
         "eslint": "^7.26.0",
