add: next sitemap to postbuild

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "normalised",
         "notekeeping",
         "organisation",
+        "postbuild",
         "prismjs",
         "sies",
         "sitename"
