--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "next-sitemap": "^1.6.95",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-katex": "^2.0.2",
         "react-latex": "^2.0.0",
         "react-syntax-highlighter": "^15.4.3",
         "recharts": "^2.0.9",
