--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
         "start": "next start"
     },
     "dependencies": {
-        "@emotion/cache": "^11.4.0",
         "@emotion/react": "^11.4.0",
-        "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.3.0",
         "@material-ui/core": "^5.0.0-alpha.34",
         "@material-ui/icons": "^5.0.0-alpha.34",
-        "@material-ui/lab": "^5.0.0-alpha.34",
         "@material-ui/styles": "^5.0.0-alpha.33",
         "clsx": "^1.1.1",
         "next": "^10.2.0",
@@ -24,10 +21,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-katex": "^2.0.2",
-        "react-latex": "^2.0.0",
         "react-syntax-highlighter": "^15.4.3",
-        "recharts": "^2.0.9",
-        "title": "^3.4.3"
+        "recharts": "^2.0.9"
     },
     "devDependencies": {
         "eslint": "^7.26.0",
