add: abstraction page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "aren",
         "browserslist",
         "clsx",
+        "datastructures",
         "dicedtomato",
         "monospace",
         "noindex",
