new: add abstraction notes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "clsx",
         "datastructures",
         "dicedtomato",
+        "goto'd",
         "monospace",
         "noindex",
         "normalised",
