--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "todo-tree.tree.scanMode": "open files",
     "cSpell.words": [
+        "ADCs",
         "Basetype",
         "Birthdate",
         "Cantarell",
