--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "webpage",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "private": true,
+    "author": "excigma",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -11,16 +12,15 @@
     "dependencies": {
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
-        "@material-ui/core": "^5.0.0-alpha.34",
-        "@material-ui/icons": "^5.0.0-alpha.34",
-        "@material-ui/styles": "^5.0.0-alpha.33",
+        "@material-ui/core": "^5.0.0-alpha.35",
+        "@material-ui/icons": "^5.0.0-alpha.35",
+        "@material-ui/styles": "^5.0.0-alpha.35",
         "clsx": "^1.1.1",
-        "next": "^10.2.0",
+        "next": "^10.2.3",
         "next-pwa": "^5.2.21",
-        "next-sitemap": "^1.6.95",
+        "next-sitemap": "^1.6.99",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-katex": "^2.0.2",
         "react-syntax-highlighter": "^15.4.3",
         "recharts": "^2.0.9"
     },
@@ -28,7 +28,6 @@
         "babel-plugin-transform-imports": "^2.0.0",
         "eslint": "^7.26.0",
         "eslint-plugin-mui-unused-classes": "^1.0.3",
-        "eslint-plugin-react": "^7.23.2",
-        "source-map": "^0.7.3"
+        "eslint-plugin-react": "^7.23.2"
     }
 }
