--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dependencies": {
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "@matejmazur/react-katex": "^3.1.3",
         "@material-ui/core": "^5.0.0-alpha.35",
         "@material-ui/icons": "^5.0.0-alpha.35",
         "@material-ui/styles": "^5.0.0-alpha.35",
         "clsx": "^1.1.1",
+        "katex": "^0.13.11",
         "next": "^10.2.3",
         "next-pwa": "^5.2.21",
         "next-sitemap": "^1.6.99",
