--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "version": "1.0.0",
     "private": true,
     "author": "excigma",
+    "browserslist": [
+        ">1%",
+        "not ie 11",
+        "not dead"
+    ],
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -23,6 +28,7 @@
         "next-sitemap": "^1.6.99",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-pdf": "^5.3.0",
         "react-syntax-highlighter": "^15.4.3",
         "recharts": "^2.0.9"
     },
