--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
         "clsx": "^1.1.1",
         "katex": "^0.13.11",
         "next": "^10.2.3",
+        "next-plugin-preact": "^3.0.6",
         "next-pwa": "^5.2.21",
         "next-sitemap": "^1.6.99",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-pdf": "^5.3.0",
+        "preact": "^10.5.13",
+        "preact-render-to-string": "^5.1.19",
+        "react": "npm:@preact/compat",
+        "react-dom": "npm:@preact/compat",
+        "react-ssr-prepass": "npm:preact-ssr-prepass",
         "react-syntax-highlighter": "^15.4.3",
         "recharts": "^2.0.9"
     },
