fix: sw still trying to download umami idk

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "postbuild",
         "prismjs",
         "psuedocode",
-        "sitename"
+        "sitename",
+        "umami"
     ]
 }
