--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "next-sitemap": "^1.6.99",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-lazy-hydration": "^0.1.0",
         "react-syntax-highlighter": "^15.4.3",
         "recharts": "^2.0.9"
     },
