--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "@material-ui/core": "^5.0.0-alpha.35",
         "@material-ui/icons": "^5.0.0-alpha.35",
         "@material-ui/styles": "^5.0.0-alpha.35",
+        "@mdx-js/loader": "^1.6.22",
         "@next/bundle-analyzer": "^10.2.3",
+        "@next/mdx": "^10.2.3",
         "clsx": "^1.1.1",
         "katex": "^0.13.11",
         "next": "^10.2.3",
