--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
         "react-dom": "^17.0.2",
         "react-lazy-hydration": "^0.1.0",
         "react-syntax-highlighter": "^15.4.3",
-        "recharts": "^2.0.9"
+        "recharts": "^2.0.9",
+        "rehype-katex": "^5.0.0",
+        "remark-math": "3"
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "^10.2.3",
