--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@material-ui/icons": "^5.0.0-alpha.35",
         "@material-ui/styles": "^5.0.0-alpha.35",
         "@mdx-js/loader": "^1.6.22",
+        "@mdx-js/react": "^1.6.22",
         "@next/bundle-analyzer": "^10.2.3",
         "@next/mdx": "^10.2.3",
         "clsx": "^1.1.1",
