--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "@mapbox/rehype-prism": "^0.6.0",
         "@matejmazur/react-katex": "^3.1.3",
         "@material-ui/core": "^5.0.0-alpha.35",
         "@material-ui/icons": "^5.0.0-alpha.35",
@@ -29,6 +30,7 @@
         "katex": "^0.13.11",
         "next": "^10.2.3",
         "next-sitemap": "^1.6.99",
+        "prismjs": "^1.23.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-lazy-hydration": "^0.1.0",
