--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@next/eslint-plugin-next": "^11.0.1",
         "babel-plugin-transform-imports": "^2.0.0",
         "eslint": "^7.26.0",
+        "eslint-config-next": "^11.0.1",
         "eslint-plugin-mui-unused-classes": "^1.0.3",
         "eslint-plugin-react": "^7.23.2",
         "webpack": "^5.38.1"
