--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "clsx": "^1.1.1",
         "katex": "^0.13.11",
         "next": "^11.0.1",
+        "owoify-js": "^1.0.7",
         "prismjs": "^1.23.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
