--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dependencies": {
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "@ffmpeg/core": "^0.8.5",
+        "@ffmpeg/ffmpeg": "^0.9.8",
         "@mapbox/rehype-prism": "^0.6.0",
         "@matejmazur/react-katex": "^3.1.3",
         "@material-ui/core": "^5.0.0-alpha.37",
