--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@next/mdx": "^11.0.1",
         "clsx": "^1.1.1",
         "katex": "^0.13.11",
+        "material-ui-dropzone": "https://github.com/Right-Angle-Engineering/material-ui-dropzone.git",
         "next": "^11.0.1",
         "owoify-js": "^1.0.7",
         "prismjs": "^1.23.0",
