--- a/package.json
+++ b/package.json
@@ -14,30 +14,28 @@
         "start": "next start"
     },
     "dependencies": {
-        "@emotion/react": "^11.4.0",
+        "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
-        "@ffmpeg/core": "^0.8.5",
-        "@ffmpeg/ffmpeg": "^0.9.8",
         "@mapbox/rehype-prism": "^0.6.0",
         "@matejmazur/react-katex": "^3.1.3",
-        "@material-ui/core": "^5.0.0-alpha.37",
-        "@material-ui/icons": "^5.0.0-alpha.37",
-        "@material-ui/styles": "^5.0.0-alpha.35",
+        "@mui/material": "^5.0.2",
+        "@mui/icons-material": "^5.0.1",
+        "@mui/styles": "^5.0.1",
         "@mdx-js/loader": "^1.6.22",
         "@mdx-js/react": "^1.6.22",
-        "@next/bundle-analyzer": "^11.0.1",
-        "@next/mdx": "^11.0.1",
+        "@next/bundle-analyzer": "^11.1.2",
+        "@next/mdx": "^11.1.2",
         "clsx": "^1.1.1",
-        "katex": "^0.13.11",
+        "katex": "^0.13.18",
         "material-ui-dropzone": "https://github.com/Right-Angle-Engineering/material-ui-dropzone.git",
-        "next": "^11.0.1",
+        "next": "^11.1.2",
         "owoify-js": "^1.0.7",
-        "prismjs": "^1.23.0",
+        "prismjs": "^1.25.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-lazy-hydration": "^0.1.0",
-        "react-syntax-highlighter": "^15.4.3",
-        "recharts": "^2.0.9",
+        "react-syntax-highlighter": "^15.4.4",
+        "recharts": "^2.1.4",
         "rehype-katex": "^5.0.0",
         "remark-math": "^3.0.0"
     },
